--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.16",
+    "@mui/styles": "^5.15.16",
+    "@tanstack/react-query": "^5.34.2",
+    "@tsparticles/engine": "^3.3.0",
+    "@tsparticles/react": "^3.0.0",
+    "@web3modal/wagmi": "^4.1.11",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-router-dom": "^6.23.0"
+    "react-router-dom": "^6.23.0",
+    "viem": "^2.9.31",
+    "wagmi": "^2.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
