--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
+    "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.5",
+    "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
+    "@mui/material-nextjs": "^5.15.11",
     "@mui/styles": "^5.15.16",
+    "@mui/system": "^5.15.15",
     "@tanstack/react-query": "^5.34.2",
-    "@tsparticles/engine": "^3.3.0",
-    "@tsparticles/react": "^3.0.0",
+    "@wagmi/core": "^2.9.1",
     "@web3modal/wagmi": "^4.1.11",
     "next": "14.2.3",
     "react": "^18",
