added: balance of account

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,4 @@
 IterrableMapping = "0xa99E30c90274f9cdc44ADA71ebdD846e057ab1ef"
-RpcGo = "0x33db38C0107d9221799B172ed063B9Ab5b789dEC"
+RPC_GO_CONTRACT_ADDRESS = "0xE7e5701279B68D2b0293D8C949179A4a63bcD398"
 ERC20Token = "0x6D32843A7394359DFB410B544Ff4413847302923"
+PROVIDER = "ttps://ethereum-holesky-rpc.publicnode.com"
