--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
 IterrableMapping = "0xa99E30c90274f9cdc44ADA71ebdD846e057ab1ef"
-RPC_GO_CONTRACT_ADDRESS = "0xE7e5701279B68D2b0293D8C949179A4a63bcD398"
-ERC20Token = "0x6D32843A7394359DFB410B544Ff4413847302923"
-PROVIDER = "ttps://ethereum-holesky-rpc.publicnode.com"
+NEXT_PUBLIC_RPC_GO_CONTRACT_ADDRESS = "0xC3Bf5ba7874FA863794B427DEef0ec866a492fBe"
+NEXT_PUBLIC_ERC20Token = "0x6D32843A7394359DFB410B544Ff4413847302923"
+NEXT_PUBLIC_PROVIDER = "https://ethereum-holesky-rpc.publicnode.com"
