--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.5",
+    "@graphprotocol/graph-cli": "^0.71.2",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
@@ -22,6 +23,7 @@
     "@tanstack/react-query": "^5.34.2",
     "@wagmi/core": "^2.9.1",
     "@web3modal/wagmi": "^4.1.11",
+    "ethers": "^6.12.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
