--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,8 @@
     "@wagmi/core": "^2.9.1",
     "@web3modal/wagmi": "^4.1.11",
     "ethers": "^6.12.1",
+    "graphql": "^16.8.1",
+    "graphql-request": "^7.0.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
