--- a/rpcSubgraph/subgraph.yaml
+++ b/rpcSubgraph/subgraph.yaml
@@ -22,6 +22,8 @@ dataSources:
         - RevertReason
         - TransferAccount
         - Withdraw
+        - Deposit
+        - Payment
         # - UserProfile
       abis:
         - name: RpcGo
@@ -39,4 +41,8 @@ dataSources:
           handler: handleTransferAccount
         - event: Withdraw(indexed address,uint256)
           handler: handleWithdraw
+        - event: Deposit(indexed address,uint256)
+          handler: handleDeposit
+        - event: Payment(indexed address,uint256)
+          handler: handlePayment
       file: ./src/rpc-go.ts
