--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@mui/material-nextjs": "^5.15.11",
     "@mui/styles": "^5.15.16",
     "@mui/system": "^5.15.15",
+    "@mui/x-charts": "^7.4.0",
     "@tanstack/react-query": "^5.34.2",
     "@wagmi/core": "^2.9.1",
     "@web3modal/wagmi": "^4.1.11",
